--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -1,6 +1,25 @@
 {% extends 'base.html' %} 
 
 {% block content %}
+
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+        {{ name }}
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="{% url 'main:show_home' %}">Home</a>
+        <a class="nav-link" href="{% url 'main:create_product' %}">New Product</a>
+        <a class="nav-link" href="{% url 'main:logout' %}">Logout</a>
+        </div>
+    </div>
+    </div>
+</nav>
+
 <h1>Add New Product</h1>
 
 <form method="POST">
@@ -15,5 +34,9 @@
         </tr>
     </table>
 </form>
+
+<a href="{% url 'main:show_main' %}" class="back-button">
+    Back
+</a>
 
 {% endblock %}
