--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -19,4 +19,12 @@
         </div>
         </div>
     </nav>
+
+    <h1>Welcome to Shopping Page</h1>
+
+    <h2>Name:</h2>
+    <h4>{{name}}</h4>
+
+    <h2>Class:</h2>
+    <h4>{{class}}</h4>
 {% endblock content %}
